Fixed footer alignment for all /pages

--- a/super.css
+++ b/super.css
@@ -332,7 +332,7 @@ body {
 
 #footer-links {
 	margin-top: 46px;
-	margin-left: -10px;
+	margin-left: 5px;
 	width: 950px;
 }
 
